--- a/sgds/sass/sgds-components/_sgds-panel.scss
+++ b/sgds/sass/sgds-components/_sgds-panel.scss
@@ -94,7 +94,7 @@ $panel-icon-color: $text-light !default;
       margin-right: 0.75em;
     }
 
-    & > .control {
+    & > .sgds-control {
       flex-grow: 1;
       flex-shrink: 1;
       width: 100%;
