--- a/sgds/sass/sgds-components/_sgds-hero.scss
+++ b/sgds/sass/sgds-components/_sgds-hero.scss
@@ -7,11 +7,11 @@
     flex-direction: column;
     justify-content: space-between;
 
-    .navbar {
+    .sgds-navbar {
       background: none;
     }
 
-    .tabs {
+    .sgds-tabs {
       ul {
         border-bottom: none;
       }
@@ -44,19 +44,19 @@
           }
         }
 
-        .navbar-menu {
+        .sgds-navbar-menu {
           @include touch {
             background-color: $color;
           }
         }
 
-        .navbar-item,
-        .navbar-link {
+        .sgds-navbar-item,
+        .sgds-navbar-link {
           color: rgba($color-invert, 0.7);
         }
 
-        a.navbar-item,
-        .navbar-link {
+        a.sgds-navbar-item,
+        .sgds-navbar-link {
           &:hover,
           &.is-active {
             background-color: darken($color, 5%);
@@ -109,7 +109,7 @@
           background-image: linear-gradient(141deg, $gradient-top-left 0%, $color 71%, $gradient-bottom-right 100%);
 
           @include mobile {
-            .navbar-menu {
+            .sgds-navbar-menu {
               background-image: linear-gradient(141deg, $gradient-top-left 0%, $color 71%, $gradient-bottom-right 100%);
             }
           }
