--- a/sgds/sass/sgds-components/_sgds-media.scss
+++ b/sgds/sass/sgds-components/_sgds-media.scss
@@ -1,4 +1,4 @@
-.media {
+.sgds-media {
   align-items: flex-start;
   display: flex;
   text-align: left;
@@ -7,26 +7,26 @@
     margin-bottom: 0.75rem;
   }
 
-  .media {
+  .sgds-media {
     border-top: 1px solid rgba($border, 0.5);
     display: flex;
     padding-top: 0.75rem;
 
     .content:not(:last-child),
-    .control:not(:last-child) {
+    .sgds-control:not(:last-child) {
       margin-bottom: 0.5rem;
     }
 
-    .media {
+    .sgds-media {
       padding-top: 0.5rem;
 
-      & + .media {
+      & + .sgds-media {
         margin-top: 0.5rem;
       }
     }
   }
 
-  & + .media {
+  & + .sgds-media {
     border-top: 1px solid rgba($border, 0.5);
     margin-top: 1rem;
     padding-top: 1rem;
@@ -34,29 +34,29 @@
 
   // Sizes
   &.is-large {
-    & + .media {
+    & + .sgds-media {
       margin-top: 1.5rem;
       padding-top: 1.5rem;
     }
   }
 }
 
-.media-left,
-.media-right {
+.sgds-media-left,
+.sgds-media-right {
   flex-basis: auto;
   flex-grow: 0;
   flex-shrink: 0;
 }
 
-.media-left {
+.sgds-media-left {
   margin-right: 1rem;
 }
 
-.media-right {
+.sgds-media-right {
   margin-left: 1rem;
 }
 
-.media-content {
+.sgds-media-content {
   flex-basis: auto;
   flex-grow: 1;
   flex-shrink: 1;
