--- a/sgds/sass/sgds-components/_sgds-navbar.scss
+++ b/sgds/sass/sgds-components/_sgds-navbar.scss
@@ -401,11 +401,11 @@ a.sgds-navbar-item,
       }
     }
 
-    .field {
+    .sgds-field {
       border-top: 1px solid rgba(black, 0.1);
       border-bottom: 1px solid rgba(black, 0.1);
   
-      .control {
+      .sgds-control {
         padding-bottom: 0 !important;
       }
     }
